--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@formkit/themes": "^1.6.2",
-    "@formkit/vue": "^1.6.2",
-    "axios": "^1.6.8",
+    "@formkit/themes": "^1.6.3",
+    "@formkit/vue": "^1.6.3",
+    "axios": "^1.7.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
